--- a/style.css
+++ b/style.css
@@ -8,8 +8,19 @@ body {
     background-color: #1F2937 ;
 }
 
-.left {
+.right li, .right a {
+    padding: 0px;
+    text-decoration: none;
+    list-style: none;
+    margin: 0;
+}
+.right ul {
+    padding:0;
+}
 
+.left {
+    font-size: 24px;
+    color:#red;
 }
 
 .right {
@@ -20,4 +31,85 @@ body {
 .hero {
 
     display: flex;
+    background-color: #1F2937 ;
+}
+
+
+.herotext {
+    color: #F9FAF8;
+    font-size: 48px;
+}
+
+.herosubtext, .right a {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.herosignup {
+    color: white;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.heroimg {
+    color: white;
+    background-color: #E5E7EB;
+}
+
+.maintitle {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 800;
+    
+}
+
+
+.cardcontainer {
+
+}
+
+.cardholder {
+
+}
+
+.card {
+    border: #3882F6 solid 4px;
+    border-radius: 10px;
+}
+
+.cardtext {
+    font-size: ;
+}
+
+
+.inspire {
+    background-color: #E5E7EB;
+}
+
+.quote {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: light-italic;
+}
+
+.quoteby {
+    font-weight: 600;
+    font-size: 20px;
+}
+
+
+.calltime {
+    background-color: #3882F6;
+    color: #F9FAF8;
+}
+
+.calltext {
+    color:white;
+}
+
+.signupbutton {
+    border: white 2px;
+    border-radius: 10px;
+    
 }
