--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ font-family: "Roboto", serif;
 }
 
 .main {
-    padding: 20 200px;
+    padding: 30px 200px 50px 200px;
     
     background-color: white;
     display: block;
@@ -159,14 +159,14 @@ font-family: "Roboto", serif;
     text-align: center;
     margin: auto;
     padding: 10px;
-    width: 100px;
+    width: 150px;
 
 }
 
 
 .inspire {
     background-color: #E5E7EB;
-    padding: 50px 235px;
+    padding: 150px 235px;
     
 }
 
@@ -174,6 +174,7 @@ font-family: "Roboto", serif;
     color: #1F2937;
     font-size: 36px;
     font-style: italic;
+    font-weight: lighter;
     
 }
 
@@ -186,31 +187,43 @@ font-family: "Roboto", serif;
 }
 
 .callup {
-    background-color: white;
-    padding: 50px 150px;
+    background-color: #ffffff;
+    padding: 100px 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    margin: 0;
     
 }
 
+.callbox {
+    display: block;
+    margin: 0;
+    
+    
+}
 
 .calltime {
     background-color: #3882F6;
+    
+    margin: 0;
+    gap: 200px;
+    
     color: #F9FAF8;
-    padding: 40px 150px;
+    padding: 50px 200px;
     border-radius: 10px;
-    display:flex;
-    justify-content: space-around;
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    max-width: 400px;
+    
 }
 
 .calltext {
     color:white;
     font-weight: 800;
-    font-size: large;
-    padding: 5px 0;
-    max-width: 300px;
+    font-size: 26px;
+    display: flex;
+    margin: 0;
+    
 }
 
 .signupbutton {
@@ -218,7 +231,7 @@ font-family: "Roboto", serif;
     border-radius: 5px;
     padding: 0px 20px;
     display: flex;
-    flex-wrap: nowrap;
+   justify-content: center;
     align-items: center;
     width: 100px;
     height: 30px;
